# sniffhound

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  QUICKREF.md  README.md  SECURITY.md  SUPPORT.md  SniffHound.db-shm  SniffHound.db-wal  mkdocs.yml  pyproject.toml  requirements-docs.txt  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docs-pages.yml  package.yml  pages.yml  pypi.yml  testpypi.yml
docs/: 404.html  CNAME  architecture.md  getting-started.md  index.html  index.md
docs/assets/stylesheets/: extra.css
docs/help/: index.md  modes.md
docs/reference/: api.md  auth.md  index.md  persistence.md  runtime.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/dist_perm_old_20260611/: index.html
frontend/dist_perm_old_20260611/assets/: DashboardView-CrQ88Ll1.js  EntityTablePanel-C6ZG-ysr.js  HoneypotView-BdwZwLZZ.js  HoneypotView-gbH2VQEV.css  index-CmJLdLcH.js  (+16 more)
frontend/public/: manifest.json
frontend/src/: App.vue  main.js
scripts/: generate_certs.py  qa_ui_cdp.js  repo_visibility_check.sh  set_github_about.sh
sniffhound/: __init__.py  __main__.py  app.py  auth.py  honeypot.py  logger.py  manage.py  rulesets.py  runtime_paths.py  server.py  settings.py  sniffer.py  store.py  utils.py  views.py
sniffhound/data/: banner_probe_requests.json  banner_regex_rules.json  default_rulesets.json  ip_presets.json
tests/: test_comprehensive.py  test_smoke.py
(+41 files in other folders)
